styling typo fixed

--- a/templates/style.scss
+++ b/templates/style.scss
@@ -1,6 +1,6 @@
 $c_gray: #ccc;
-$gradient_from: #444444
-$gradient_to: #999999
+$gradient_from: #444444;
+$gradient_to: #999999;
 #header {
             background: $c_gray;
             padding-left: 5em;
